--- a/gb/24/6/6/n14265613.md
+++ b/gb/24/6/6/n14265613.md
@@ -10,42 +10,42 @@
 <div class="video_fit_container"><a width="635" b="356" class="video_frame" src="https://www.ganjing.com/embed/1gptlvk20031nHKTQ72kuYUvF1741c" allowfullscreen></a>
 </div>
 <p class="p3"><span class="s7">6</span><span class="s8">月</span><span class="s7">2</span><span class="s8">号，大约</span><span class="s7">300</span><span class="s8">人齐聚伦敦议会广场参加悼念活动，来自</span>“中国反贼”的<span class="s9">倪沛晴</span>在发言时表示：<span class="s1">六四</span>不仅仅是历史一页，<span class="s2">35</span>年来极权中共还在极力维护它们的极权统治，不仅仅在中国，海外勇于发声的中国留学生不时受到中共骚扰和威胁，中共利用黑客在网<span class="s1">络</span>上攻击民主人士和其筹办的活动，甚至利用国内家人对这些学生进行威胁和诱骗，妄图剥夺每一个人言论自由的权<span class="s1">利</span>。我们必须站出来让世界知道中共这种海外监视威胁的途径，而民主自由国家应该正视和保护这群抵抗中共压迫的人群。</p>
-<figure id="attachment_14265605" aria-describedby="caption-attachment-14265605" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14265605-signal-2024-06-06-182330_003.jpeg"><img class="size-medium wp-image-14265605" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265605-signal-2024-06-06-182330_003-450x665.jpeg" alt="" width="450" b="665" /></a><figcaption id="caption-attachment-14265605" class="wp-caption-text">来自“中国反贼”扮演民主女神的倪沛晴。(陈文/大纪元)</figcaption></figure>
+<figure id="attachment_14265605" aria-describedby="caption-attachment-14265605" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14265605-signal-2024-06-06-182330_003.jpeg"><img decoding="async" class="size-medium wp-image-14265605" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265605-signal-2024-06-06-182330_003-450x665.jpeg" alt="" width="450" b="665" /></a><figcaption id="caption-attachment-14265605" class="wp-caption-text">来自“中国反贼”扮演民主女神的倪沛晴。(陈文/大纪元)</figcaption></figure>
 <p class="p1">国际特赦组织英国分部行政总裁<span class="s1">Sacha Deshmukh</span>发言讲到：中共极力想抹掉<span class="s1">8964</span>那段黑暗历史，抹掉大家集体的回忆，今天我们站在这里团结一致是十分重要<span class="s2">的</span>。全球数千人将在此日站出来点燃烛光讲述当年天安门真实的历史，除了悼念<span class="s2">六四</span>冤魂还彰显维护人权的决心。<span class="s1">Sacha</span>特别提到香港，如港府禁制<span class="s2">《</span>愿荣光归香港<span class="s2">》</span>的歌曲，通过极具争议性而定义十分广<span class="s2">泛</span>模糊的<span class="s1">23</span>条，对<span class="s1">47</span>人案的定罪等，种种迹象表明中共历来钳制集会<span class="s2">、</span>言论自由<span class="s2">、</span>打击政治异见等手段已在香港全面实施。短短数年，香港人权状况急剧恶化。截至<span class="s1">2023</span>年，在国际特赦的报告中，中共实施死刑的数字一直在全世界名列前茅。同时，中国异见者，包括中国留学生<span class="s2">、</span>香港人<span class="s2">、</span>藏人<span class="s2">和</span>新疆人等，在海外<span class="s2">的</span>自由同样受到中共的长臂威胁和骚扰，所以我们今天站出来十分重要，让中共和世界知道，世人对中共的行径和它对人权的侵犯不会视若无睹，它的一切犯罪行径都被我们一一记录在案。</p>
-<figure id="attachment_14265614" aria-describedby="caption-attachment-14265614" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14265614-8dcad36917559c6c7acab46eece16134.jpg"><img class="size-medium wp-image-14265614" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265614-8dcad36917559c6c7acab46eece16134-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14265614" class="wp-caption-text">蒙兆达手持邹幸彤照片。（陈文/大纪元）</figcaption></figure>
+<figure id="attachment_14265614" aria-describedby="caption-attachment-14265614" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14265614-8dcad36917559c6c7acab46eece16134.jpg"><img decoding="async" class="size-medium wp-image-14265614" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265614-8dcad36917559c6c7acab46eece16134-450x338.jpg" alt="" width="450" b="338" /></a><figcaption id="caption-attachment-14265614" class="wp-caption-text">蒙兆达手持邹幸彤照片。（陈文/大纪元）</figcaption></figure>
 <p class="p3"><span class="s3">香港劳权监察总干事蒙兆达表示</span><span class="s4">：</span><span class="s3">今天的香港，</span><span class="s4">六四</span><span class="s3">已经成为一个禁</span><span class="s4">词</span><span class="s3">，</span>邹幸彤连其他普通市民在<span class="s1">23</span>条实施<span class="s2">后</span>被拘捕，我们很清楚看到，政权不仅仅压制我们的集会<span class="s2">、</span>言论<span class="s2">、</span>传媒等自由，现在连思想自由也不能幸免。邹幸彤他们只是回顾过去数年筹备<span class="s4">六四</span>活动等等细节，而政权将回忆都要钳制定罪，这是十分荒诞的。而之前香港法庭对<span class="s1">47</span>人案的定罪，根本就是对这些人对争取民主的政治报复。身在海外的我们，有发声的自由，我们没有理由去放弃，当<span class="s2">墙</span>内香港人面对如此大政治压力的环境都没有放弃，我们更应该要<span class="s2">为</span>仍在囚笼的他们走出来。@</p>
 <p class="p3">责任编辑：陈彬</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/9/n14244477.md#1">英国地方选举 工党大胜 执政党惨败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/9/n14244492.md#1">英国11个地方市长选举 工党赢十个</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/9/n14244497.md#1">中东局势影响英国选举</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/9/n14244506.md#1">忘带身份证件 英国前首相投票被拒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308145.md#1">斯塔默：过渡期领袖变成英国首相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302944.md#1">六人宣布竞选英国保守党领袖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288461.md#1">工党大选宣言 做出哪些承诺</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288472.md#1">象棋冠军成英国首位女财政大臣</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258414.md#1">安金藏剖心的一刀 忠义震慑逆乱 挽救了唐朝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232421.md#1">【古韵流芳】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264712.md#1">【新闻大家谈】确定加速倒车？三中全会定调</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263982.md#1">【菁英论坛】35年崩而未溃 六四后中国魔变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263737.md#1">中国榴莲价格大跳水 供大于求是主因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264001.md#1">中国通解读中共党魁为何不肯救经济</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263634.md#1">沉睡海底80年 美二战传奇潜艇“哈德号”现踪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263337.md#1">《庆余年2》又现穿帮镜头 屋顶有智能手机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263308.md#1">汤唯放闪导演丈夫：他有6岁男孩的好奇心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264874.md#1">范冰冰不再试水温 工作室开通社交平台新账号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264041.md#1">当年为家庭退出娱乐圈 黎姿回应复出传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264149.md#1">大陆演唱遭虫子袭击 张信哲与邓紫棋反应迥异</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260837.md#1">秋葵热量低又营养 教你如何料理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263686.md#1">买不起新鲜蔬果 吃冷冻的也一样健康吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264003.md#1">枕头套比马桶还脏？微生物专家告诉你该多久洗一次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264509.md#1">什么事不适合用简讯传达？ 礼仪专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/7/n14243167.md#1">为何吃降压药仍中风？中医5策略帮你自然降血压</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306146.md#1">老花 近视 飞蚊症 干眼症 中医7招应对眼疾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/6/n14265613.htm">蒙兆达: 身处自由  为身处囚笼的战友走出来</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265613.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
